# skoda_parse_packages

./: CMakeLists.txt  README.md  beautify.sh  common_types.h  data_loader.h  entity_properties.h  package_generator.cpp  package_properties.h  skoda_options.txt  skoda_options_price.txt  skoda_packages.txt  skoda_parsed_packages.txt  Прайс-лист на опції_МР 2022 з 25КН.ods
